<resources>
    <string name="cancel">Cancel</string>
    <string name="copy">Copy</string>
    <string name="copyUrl">Copy URL</string>
    <string name="cut">Cut</string>
    <string name="defaultVoiceMailAlphaTag">Voicemail</string>
    <string name="defaultMsisdnAlphaTag">MSISDN1</string>
    <string name="emptyPhoneNumber">(No phone number)</string>
    <string name="httpErrorBadUrl">"Couldn't open the page because the URL is invalid."</string>
    <string name="httpErrorUnsupportedScheme">"The protocol isn't supported."</string>
    <string name="no">Cancel</string>
    <string name="ok">OK</string>
    <string name="paste">Paste</string>
    <string name="search_go">Search</string>
    <string name="selectAll">Select all</string>
    <string name="unknownName">(Unknown)</string>
    <string name="untitled">&lt;Untitled></string>
    <string name="VideoView_error_button">OK</string>
    <string name="VideoView_error_text_unknown">"Can't play this video."</string>
    <string name="VideoView_error_title">Video problem</string>
    <string name="yes">OK</string>
    <string name="dialog_alert_title">Attention</string>
    <string name="VideoView_error_text_invalid_progressive_playback">"This video isn't valid for streaming to this device."</string>
    <string name="selectTextMode">Select text</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="config_keyguard_weather_cp">hf</string>
    <string name="key_lockscreen_weather">key_lockscreen_weather</string>
    <string name="weather_default_location">auto location</string>
    <string name="weather_invalid">Unknown</string>
    <string name="weather_no_city">No city</string>
    <string name="degree">°</string>
    <string name="weather_add_city_text">Add city</string>
    <string name="keyguard_password_enter_password_code">Type password to unlock</string>
    <string name="keyguard_password_enter_pin_password_code">Type PIN to unlock</string>
    <string name="local_time">BeiJing Time</string>
    <string name="unlock_new_message">new message</string>
    <string name="unlock_new_call">new call</string>
    <string name="unlock_new_email">new email</string>
    <string name="unlock_new_calendar">new calendar</string>
    <string name="intellj_reminder_button_text">Got it</string>
    <string name="intellj_reminder_remind_time">intellj_reminder_remind_time</string>
    <string name="intellj_reminder_by_mieasyaccess">intellj_reminder_by_mieasyaccess</string>
    <string name="intellj_count_of_unlock">intellj_count_of_unlock</string>
    <string name="intellj_reminder_mieasyaccess_by_first_time">intellj_reminder_mieasyaccess_by_first_time</string>
    <string name="intellj_reminder_mieasyaccess_by_time">intellj_reminder_mieasyaccess_by_time</string>
    <string name="intellj_reminder_by_viewpager">intellj_reminder_by_viewpager</string>
    <string name="intellj_reminder_viewpager_by_first_time">intellj_reminder_viewpager_by_first_time</string>
    <string name="intellj_reminder_viewpager_by_second_time">intellj_reminder_viewpager_by_second_time</string>
    <string name="intellj_reminder_viewpager_by_time">intellj_reminder_viewpager_by_time</string>
    <string name="intellj_count_of_wrong_gesture">intellj_count_of_wrong_gesture</string>
    <string name="global_action_reset">Reset</string>
    <string name="auto_restore_title">Restore User Data</string>
    <string name="auto_restore_message">Do you want to restore you user data?</string>
    <string name="auto_restore_button">Restore</string>
    <string name="usb_charge_only_notification_title">Connected to charge only</string>
    <string name="usb_mass_storage_notification_title">Connected as USB mass storage</string>
    <string name="usb_cdrom_notification_title">Connected to install driver</string>
    <string name="usb_sync_notification_title">Connected to PC software</string>
    <string name="usb_unknown_notification_title">Connected to unknown connect type</string>
    <string name="usb_storage_activity_notification_title">USB mass storage</string>
    <string name="usb_tethering_notification_title">Connected to use mobile network</string>
    <string name="usb_charge_only_notification_message">Charge your phone via USB</string>
    <string name="usb_mass_storage_notification_message">Transfer files between PC and external SD card on Android devices</string>
    <string name="usb_cdrom_notification_message">"Select this option when features(Connect to PC software, Media device) enabled for the first time, or when they're unabailable"</string>
    <string name="usb_sync_notification_message">Install apps or manage data on the phone via PC software</string>
    <string name="usb_mtp_notification_message">Use phone as USB storage and transfer files when it is connected to Windows PC or MAC</string>
    <string name="usb_ptp_notification_message">Use camera software to transfer pictures from phone to PC</string>
    <string name="usb_storage_activity_notification_message">Select to copy files to//from your computer.</string>
    <string name="usb_tethering_notification_message">To share mobile network of your phone and access Internet on PC</string>
    <string name="usb_unknown_notification_message">Connected to unknown connect type</string>
    <string name="select_timezone_title">Select time zone</string>
    <string name="select_timezone_content">Select time zone</string>
    <string name="emmc_total_size">4000000000</string>
    <string name="config_ethernet_iface_regex">eth\\d</string>
    <string name="config_tether_apndata" />
    <string name="config_wifi_p2p_device_type">10-0050F204-5</string>
    <string name="widget_default_package_name" />
    <string name="widget_default_class_name" />
    <string name="default_wallpaper_component">@null</string>
    <string name="config_networkLocationProviderPackageName">@null</string>
    <string name="config_fusedLocationProviderPackageName">com.android.location.fused</string>
    <string name="config_geocoderProviderPackageName">@null</string>
    <string name="config_geofenceProviderPackageName">@null</string>
    <string name="config_geofenceProvider">com.qualcomm.location</string>
    <string name="config_datause_iface">rmnet0</string>
    <string name="config_default_dns_server">8.8.8.8</string>
    <string name="mobile_provisioning_url" />
    <string name="mobile_redirected_provisioning_url">http://google.com</string>
    <string name="gsm_alphabet_default_charset" />
    <string name="db_default_journal_mode">PERSIST</string>
    <string name="db_default_sync_mode">FULL</string>
    <string name="db_wal_sync_mode">FULL</string>
    <string name="config_useragentprofile_url" />
    <string name="config_isoImagePath" />
    <string name="config_ntpServer">2.android.pool.ntp.org</string>
    <string name="config_wimaxServiceJarLocation" />
    <string name="config_wimaxNativeLibLocation" />
    <string name="config_wimaxManagerClassname" />
    <string name="config_wimaxServiceClassname" />
    <string name="config_wimaxStateTrackerClassname" />
    <string name="config_dreamsDefaultComponent">com.google.android.deskclock/com.android.deskclock.Screensaver</string>
    <string name="config_chooseAccountActivity">android/android.accounts.ChooseAccountActivity</string>
    <string name="config_chooseTypeAndAccountActivity">android/android.accounts.ChooseTypeAndAccountActivity</string>
    <string name="config_appsAuthorizedForSharedAccounts">;com.android.settings;</string>
    <string name="config_lockscreen_classname">com.android.internal.policy.impl.MiFavorChangeableLockScreen</string>
    <string name="config_lockscreen_mode">frame</string>
    <string name="hour_minute_24" formatted="false">%H:%M</string>
    <string name="hour_minute_ampm" formatted="false">%-l:%M%p</string>
    <string name="hour_minute_cap_ampm" formatted="false">%-l:%M%^p</string>
    <string name="numeric_date" formatted="false">%-m/%-e/%Y</string>
    <string name="numeric_date_format">M/d/yyyy</string>
    <string name="numeric_date_template" formatted="false">%s/%s/%s</string>
    <string name="month_day_year" formatted="false">%B %-e, %Y</string>
    <string name="time_of_day" formatted="false">%-l:%M:%S %p</string>
    <string name="date_and_time" formatted="false">%b %-e, %Y, %-l:%M:%S %p</string>
    <string name="date_time">%1$s, %2$s</string>
    <string name="time_date">%1$s, %3$s</string>
    <string name="abbrev_month_day_year" formatted="false">%b %-e, %Y</string>
    <string name="month_day" formatted="false">%B %-e</string>
    <string name="month">%-B</string>
    <string name="month_year" formatted="false">%B %Y</string>
    <string name="abbrev_month_day" formatted="false">%b %-e</string>
    <string name="abbrev_month">%-b</string>
    <string name="abbrev_month_year" formatted="false">%b %Y</string>
    <string name="time1_time2">%1$s – %2$s</string>
    <string name="date1_date2">%2$s – %5$s</string>
    <string name="numeric_md1_md2">%2$s/%3$s – %7$s/%8$s</string>
    <string name="numeric_wday1_md1_wday2_md2">%1$s, %2$s/%3$s – %6$s, %7$s/%8$s</string>
    <string name="numeric_mdy1_mdy2">%2$s/%3$s/%4$s – %7$s/%8$s/%9$s</string>
    <string name="numeric_wday1_mdy1_wday2_mdy2">%1$s, %2$s/%3$s/%4$s – %6$s, %7$s/%8$s/%9$s</string>
    <string name="numeric_wday1_mdy1_time1_wday2_mdy2_time2">%1$s, %2$s/%3$s/%4$s, %5$s – %6$s, %7$s/%8$s/%9$s, %10$s</string>
    <string name="numeric_md1_time1_md2_time2">%2$s/%3$s, %5$s – %7$s/%8$s, %10$s</string>
    <string name="numeric_wday1_md1_time1_wday2_md2_time2">%1$s, %2$s/%3$s, %5$s – %6$s, %7$s/%8$s, %10$s</string>
    <string name="numeric_mdy1_time1_mdy2_time2">%2$s/%3$s/%4$s, %5$s – %7$s/%8$s/%9$s, %10$s</string>
    <string name="wday1_date1_time1_wday2_date2_time2">%1$s, %2$s, %3$s – %4$s, %5$s, %6$s</string>
    <string name="wday1_date1_wday2_date2">%1$s, %2$s – %4$s, %5$s</string>
    <string name="date1_time1_date2_time2">%2$s, %3$s – %5$s, %6$s</string>
    <string name="time_wday_date">%1$s, %2$s, %3$s</string>
    <string name="wday_date">%2$s, %3$s</string>
    <string name="time_wday">%1$s, %2$s</string>
    <string name="same_year_md1_md2">%2$s %3$s – %7$s %8$s</string>
    <string name="same_year_wday1_md1_wday2_md2">%1$s, %2$s %3$s – %6$s, %7$s %8$s</string>
    <string name="same_year_md1_time1_md2_time2">%2$s %3$s, %5$s – %7$s %8$s, %10$s</string>
    <string name="same_month_md1_time1_md2_time2">%2$s %3$s, %5$s – %7$s %8$s, %10$s</string>
    <string name="same_year_wday1_md1_time1_wday2_md2_time2">%1$s, %2$s %3$s, %5$s – %6$s, %7$s %8$s, %10$s</string>
    <string name="same_month_wday1_md1_time1_wday2_md2_time2">%1$s, %2$s %3$s, %5$s – %6$s, %7$s %8$s, %10$s</string>
    <string name="same_year_mdy1_time1_mdy2_time2">%2$s %3$s, %4$s, %5$s – %7$s %8$s, %9$s, %10$s</string>
    <string name="same_month_mdy1_time1_mdy2_time2">%2$s %3$s, %4$s, %5$s – %7$s %8$s, %9$s, %10$s</string>
    <string name="lockscreen_transport_prev_description">Previous track button</string>
    <string name="lockscreen_transport_next_description">Next track button</string>
    <string name="lockscreen_transport_play_description">Play button</string>
    <string name="keygaurd_accessibility_media_controls">Media controls</string>
    <string name="keyguard_accessibility_pattern_unlock">Pattern unlock.</string>
    <string name="keyguard_accessibility_pin_unlock">Pin unlock.</string>
    <string name="keyguard_accessibility_pattern_area">Pattern area.</string>
    <string name="keyboardview_keycode_delete">Delete</string>
    <string name="keyboardview_keycode_enter">Enter</string>
    <string name="unlock_widget_prompt">Swipe left to display weather, music, new messages, etc.</string>
    <string name="unlock_eara_title">About Unlock</string>
    <string name="unlock_eara_prompt">Long press screen to unlock</string>
    <string name="unlock_eara_app_title">Swipe left to display shortcut entry</string>
</resources>