<?xml version="1.0" encoding="utf-8"?>
<com.android.internal.policy.impl.keyguard.KeyguardTransportControlView android:gravity="center_horizontal" android:id="@id/keyguard_transport_control" android:paddingTop="@dimen/keyguard_music_margintop" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <FrameLayout android:layout_width="fill_parent" android:layout_height="fill_parent" android:contentDescription="@string/keygaurd_accessibility_media_controls">
        <ImageView android:layout_gravity="fill" android:id="@id/albumart" android:layout_width="fill_parent" android:layout_height="fill_parent" android:scaleType="centerCrop" android:adjustViewBounds="false" />
    </FrameLayout>
    <LinearLayout android:gravity="center" android:orientation="horizontal" android:paddingLeft="52.0dip" android:paddingRight="52.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <FrameLayout android:layout_width="wrap_content" android:layout_height="fill_parent">
            <ImageView android:layout_gravity="center_vertical" android:id="@id/btn_play" android:background="?selectableItemBackground" android:padding="10.0dip" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_media_play" android:contentDescription="@string/lockscreen_transport_play_description" />
        </FrameLayout>
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textAppearance="?textAppearanceMedium" android:ellipsize="end" android:gravity="center_horizontal" android:id="@id/title" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="6.0dip" android:layout_marginTop="8.0dip" android:singleLine="true" style="@style/UnlockText" />
            <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="5.0dip">
                <FrameLayout android:layout_width="wrap_content" android:layout_height="wrap_content">
                    <ImageView android:layout_gravity="center" android:id="@id/btn_prev" android:background="?selectableItemBackground" android:padding="10.0dip" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_media_previous" android:contentDescription="@string/lockscreen_transport_prev_description" />
                </FrameLayout>
                <FrameLayout android:layout_width="wrap_content" android:layout_height="wrap_content">
                    <ImageView android:layout_gravity="center" android:id="@id/btn_next" android:background="?selectableItemBackground" android:padding="10.0dip" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_media_next" android:contentDescription="@string/lockscreen_transport_next_description" />
                </FrameLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</com.android.internal.policy.impl.keyguard.KeyguardTransportControlView>