<?xml version="1.0" encoding="utf-8"?>
<com.android.internal.policy.impl.keyguard.KeyguardPatternView android:gravity="center_horizontal" android:orientation="vertical" android:id="@id/keyguard_pattern_view" android:paddingTop="@dimen/keyguard_zte_scroller_height" android:layout_width="fill_parent" android:layout_height="fill_parent" android:contentDescription="@string/keyguard_accessibility_pattern_unlock"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <FrameLayout android:layout_width="fill_parent" android:layout_height="fill_parent">
        <LinearLayout android:layout_gravity="center" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_weight="1.0">
            <FrameLayout android:gravity="center" android:id="@id/keyguard_bouncer_frame" android:background="@drawable/kg_bouncer_bg_white" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0">
                <LinearLayout android:orientation="horizontal" android:id="@id/keygard_pattern_frame" android:paddingTop="90.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_weight="1.0">
                    <ImageButton android:layout_gravity="center_vertical" android:id="@id/keygard_pattern_left_button" android:background="?selectableItemBackground" android:paddingLeft="24.0dip" android:paddingTop="8.0dip" android:paddingRight="24.0dip" android:paddingBottom="8.0dip" android:visibility="visible" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_lockscreen_left" android:layout_weight="1.0" android:contentDescription="@string/keyboardview_keycode_delete" />
                    <com.android.internal.widget.LockPatternView android:gravity="center" android:layout_gravity="center" android:id="@id/lockPatternView" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_marginBottom="4.0dip" android:layout_weight="10.0" android:contentDescription="@string/keyguard_accessibility_pattern_area" android:layout_marginStart="8.0dip" android:layout_marginEnd="8.0dip" />
                    <ImageButton android:layout_gravity="center_vertical" android:id="@id/keygard_pattern_right_button" android:background="?selectableItemBackground" android:paddingLeft="24.0dip" android:paddingTop="8.0dip" android:paddingRight="24.0dip" android:paddingBottom="8.0dip" android:visibility="gone" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_lockscreen_right" android:layout_weight="1.0" android:contentDescription="@string/keyboardview_keycode_delete" />
                </LinearLayout>
            </FrameLayout>
            <include android:gravity="center_horizontal" android:layout_gravity="bottom|center" android:orientation="vertical" android:id="@id/keyguard_selector_fade_container" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_weight="0.0" layout="@layout/keyguard_eca" />
        </LinearLayout>
    </FrameLayout>
</com.android.internal.policy.impl.keyguard.KeyguardPatternView>